--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,10 +8,81 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mezereon.bustrack.Login.Activity.LoginActivity">
+    tools:context="com.example.mezereon.Login.LoginActivity">
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="点击获取验证码"
+        android:id="@+id/appCompatButton"
+        android:background="#FFFFFF"
+        android:textColor="#009688"
+        android:textSize="19sp"
+        android:layout_marginTop="21dp"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_centerHorizontal="true" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appCompatButton"
+        android:layout_alignLeft="@+id/appCompatButton"
+        android:layout_alignStart="@+id/appCompatButton"
+        android:layout_marginTop="19dp"
+        android:id="@+id/textInputLayout2">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="请输入验证码"
+            android:id="@+id/textInputEditText2"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="#009688"
+        android:text="登陆"
+        android:textColor="#FFFFFF"
+        android:textSize="19sp"
+        android:id="@+id/appCompatButton2"
+        android:layout_below="@+id/textInputLayout2"
+        android:layout_alignLeft="@+id/textInputLayout2"
+        android:layout_alignStart="@+id/textInputLayout2"
+        android:layout_marginTop="20dp" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="279dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textInputLayout"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/appCompatButton"
+        android:layout_alignStart="@+id/appCompatButton">
+
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:id="@+id/textInputEditText"
+            android:hint="请输入手机号码："
+            android:inputType="phone"
+            android:textColorHint="#3399cc"
+            android:layout_above="@+id/appCompatButton"
+            android:layout_alignLeft="@+id/textInputLayout"
+            android:layout_alignStart="@+id/textInputLayout" />
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Welcome"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:textColor="#333333"
+        android:id="@+id/textView"
+        android:layout_marginTop="101dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
