--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -18,7 +18,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="26dp"
-            android:layout_below="@+id/textView3"
+            android:layout_below="@+id/bmapView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -52,15 +52,11 @@
             android:id="@+id/spinner2"
             android:entries="@array/languages"/>
 
-        <TextView
-            android:layout_width="match_parent"
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="fill_parent"
             android:layout_height="350dp"
-            android:text="map"
-            android:gravity="center"
-            android:id="@+id/textView3"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:clickable="true" />
 
         <android.support.v7.widget.AppCompatButton
             android:layout_width="180dp"
