--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.example.mezereon.Home.HomeActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar"
+        android:elevation="10dp"
+        android:background="#00695c">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:text="实时"
+            android:textSize="19sp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical"
+            />
+    </android.support.v7.widget.Toolbar>
     <android.support.v4.view.ViewPager
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/viewpager"
