--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -4,33 +4,39 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:text="用户昵称或者手机号"
-        android:textSize="19sp"
-        android:textColor="#333333"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="31dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginBottom="30dp"
-        android:id="@+id/username"
-        android:layout_alignBottom="@+id/circleImageView"
-        android:layout_toRightOf="@+id/circleImageView"
-        android:layout_toEndOf="@+id/circleImageView" />
-
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@mipmap/pic"
         app:civ_border_width="1dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="14dp"
         android:layout_marginLeft="11dp"
-        app:civ_border_color="#2C2C2C"
+        app:civ_border_color="#FFFFFF"
         android:id="@+id/circleImageView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="11dp" />
+
+    <TextView
+        android:text="用户昵称或者手机号"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="31dp"
+        android:layout_marginStart="16dp"
+        android:id="@+id/username"
+        android:layout_alignTop="@+id/circleImageView"
+        android:layout_toEndOf="@+id/circleImageView" />
+
+    <TextView
+        android:text="查看或编辑个人头像"
+        android:textColor="#aaaa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        android:layout_alignBottom="@+id/circleImageView"
+        android:layout_alignStart="@+id/username" />
 
 </RelativeLayout>
