--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,14 +23,14 @@
             android:gravity="center_vertical"
             />
     </android.support.v7.widget.Toolbar>
-    <android.support.v4.view.ViewPager
+    <com.example.mezereon.Home.ViewPagerCompat
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/viewpager"
         android:layout_above="@+id/tab_layout">
 
-    </android.support.v4.view.ViewPager>
+    </com.example.mezereon.Home.ViewPagerCompat>
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
