--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -9,49 +9,67 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="当前座位剩余数：XXXX"
-            android:textColor="#333333"
-            android:textSize="19sp"
-            android:layout_marginTop="89dp"
-            android:id="@+id/textView5"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="79dp"
-            android:layout_marginStart="79dp" />
+            android:layout_marginStart="79dp"
+            android:layout_marginTop="89dp"
+            android:text="当前座位剩余数：XXXX"
+            android:textColor="#333333"
+            android:textSize="19sp" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
-            android:id="@+id/textInputLayout3"
             android:layout_below="@+id/textView5"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="38dp">
 
             <EditText
+                android:id="@+id/editText"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView5"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="65dp"
-                android:id="@+id/editText"
-                android:hint="请输入您的学号或者姓名"/>
+                android:hint="请输入您的学号或者姓名" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
+            android:id="@+id/button"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="点击预订"
-            android:textSize="19sp"
+            android:layout_alignStart="@+id/textInputLayout3"
+            android:layout_below="@+id/place"
+            android:layout_marginTop="40dp"
             android:background="#009688"
-            android:layout_marginTop="70dp"
-            android:id="@+id/button"
+            android:text="点击预订"
+            android:textColor="#FFFFFF"
+            android:textSize="19sp" />
+
+        <Spinner
+            android:id="@+id/place"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/textInputLayout3"
+            android:layout_alignTop="@+id/textView7"
+            android:entries="@array/place"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/textInputLayout3"
             android:layout_below="@+id/textInputLayout3"
-            android:layout_alignLeft="@+id/textInputLayout3"
-            android:layout_alignStart="@+id/textInputLayout3" />
+            android:layout_marginTop="29dp"
+            android:text="上车站点"
+            android:textColor="#333333"
+            android:textSize="19sp" />
 
 
     </RelativeLayout>
