--- a/app/src/main/res/layout/activity_station_list.xml
+++ b/app/src/main/res/layout/activity_station_list.xml
@@ -29,6 +29,7 @@
         android:id="@+id/id_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/toolbar1"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar1" />
 </RelativeLayout>
