--- a/app/src/main/res/layout/item_station.xml
+++ b/app/src/main/res/layout/item_station.xml
@@ -1,59 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:orientation="horizontal">
+    android:layout_width="wrap_content" android:layout_height="100dp"
+    >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/stationName"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:id="@+id/imageView"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/circle" />
-
-        <com.example.mezereon.Home.Model.Myline
-            android:layout_height="match_parent"
-            android:layout_width="20dp"
-            android:id="@+id/mylineview">
-
-        </com.example.mezereon.Home.Model.Myline>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/stationName"
-            android:layout_marginTop="-4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="60dp"
-            android:text="TextView"
-            android:textSize="20dp"
-            />
-        <TextView
-            android:id="@+id/stationIntroduction"
-            android:visibility="gone"
-            android:layout_marginTop="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:minHeight="60dp"
-            android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextView"
-            android:textSize="20dp"
-            />
-    </LinearLayout>
+        android:text="TextView"
+        android:textSize="20dp"
+        android:layout_marginStart="28dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageView" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/circle"
+        android:layout_alignBottom="@+id/stationName"
+        android:layout_alignParentStart="true" />
 
-
-
-</LinearLayout>
+    <TextView
+        android:textSize="20dp"
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/stationName"
+        android:layout_marginStart="23dp" />
+</RelativeLayout>
