--- a/app/src/main/res/layout/item_station.xml
+++ b/app/src/main/res/layout/item_station.xml
@@ -1,33 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content" android:layout_height="100dp"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/stationName"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20dp"
-        android:layout_marginStart="28dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <ImageView
+            android:id="@+id/imageView"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/circle" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/circle"
-        android:layout_alignBottom="@+id/stationName"
-        android:layout_alignParentStart="true" />
+        <com.example.mezereon.Home.Model.Myline
+            android:layout_height="match_parent"
+            android:layout_width="20dp"
+            android:id="@+id/mylineview">
 
-    <TextView
-        android:textSize="20dp"
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        </com.example.mezereon.Home.Model.Myline>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/stationName"
-        android:layout_marginStart="23dp" />
-</RelativeLayout>
+        android:layout_marginLeft="5dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/stationName"
+            android:layout_marginTop="-4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="60dp"
+            android:text="TextView"
+            android:textSize="20dp"
+            />
+        <TextView
+            android:id="@+id/stationIntroduction"
+            android:visibility="gone"
+            android:layout_marginTop="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:minHeight="60dp"
+            android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextView"
+            android:textSize="20dp"
+            />
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
